--- a/static/css.css
+++ b/static/css.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Aldrich|Russo+One');
+@import url('https://fonts.googleapis.com/css?family=Aldrich|Russo+One|Source+Code+Pro');
 
 * {
   box-sizing: border-box;
@@ -134,4 +134,27 @@
 }
 .tile.tile-move-from {
   border-color: #ff0000;
+}
+
+/* Edit */
+.edit-wrapper {
+  background-color: #eeffee;
+}
+.edit-start-button {
+  font-size: 1.6rem;
+  border: 1px solid #228822;
+  border-radius: 4px;
+  margin: 4px;
+  padding: 4px;
+
+  cursor: pointer;
+}
+.textedit-wrapper textarea{
+  width: 100%;
+  height: 9rem;
+  margin: 8px;
+
+  font-family: 'Source Code Pro', monospace;
+  font-size: 1.3rem;
+  ime-mode: disabled;
 }
