--- a/static/css.css
+++ b/static/css.css
@@ -158,3 +158,20 @@
   font-size: 1.3rem;
   ime-mode: disabled;
 }
+
+.geturl-button {
+  display: inline-block;
+  font-size: 1.2rem;
+
+  border: 1px solid #228822;
+  border-radius: 4px;
+  padding: 4px;
+  margin: 4px;
+
+  cursor: pointer;
+}
+.geturl-url {
+  word-break: break-all;
+  width: 100%;
+  overflow-x: scroll;
+}
