--- a/static/css.css
+++ b/static/css.css
@@ -100,6 +100,7 @@
 }
 .tile-op {
   background-color: #777777;
+  line-height: 48px;
 }
 .tile-number.tile-remains {
   background-color: #99b5ff;
@@ -174,4 +175,33 @@
   word-break: break-all;
   width: 100%;
   overflow-x: scroll;
+}
+
+/* page */
+section.page-desc {
+  text-align: center;
+  border-top: 2px dashed #888888;
+}
+a.twitter-link {
+  color: #0084B4;
+  text-decoration: none;
+}
+a.twitter-link:hover {
+  text-decoration: underline;
+}
+.page-tweet {
+  margin: 1rem auto;
+  width: 550px;
+}
+
+.page-hist {
+  background-color: #f4f4f4;
+  max-width: 550px;
+  margin: 1rem auto;
+  padding: 1rem;
+}
+.page-hist-sec > h1 {
+  font-size: 1.15rem;
+  color: #444444;
+  margin: 0.4em 0;
 }
